--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class = "basic">
     <h1>Lista de exemplos de HTML</h1>
-    
+
+    <h2>HTML Básico</h2>
+    <p>Todos os documentos HTML devem começar com uma declaração de tipo de documento: <code>&lt!DOCTYPE html&gt</code>.
+
+    <br>O próprio documento HTML começa &lthtml&gt e termina com &lt/html&gt.
+
+    A parte visível do documento HTML está entre &ltbody&gt e &lt/body&gt.</p>
+    <p>A <code>&lt!DOCTYPE&gt</code> declaração representa o tipo de documento e ajuda os navegadores a exibir as páginas da web corretamente.<br>
+
+        Deve aparecer apenas uma vez, no topo da página (antes de qualquer tag HTML).</p>
+
+    <h2>HTML Básico</h2>
+
+    <p>Os títulos HTML são definidos com as tags <code>&lth1&gt</code> to <code>&lth6&gt</code>.
+
+    <code>&lth1&gt</code> define o título mais importante. <code>&lth6&gt</code> define o título menos importante</p>
+
+    <h2>Exemplo</h2>
+
+    <h1>Este texto é em <code>&lth1&gt</code></h1>
+    <h2>Este texto é em <code>&lth2&gt</code></h2>
+    <h3>Este texto é em <code>&lth3&gt</code></h3>
+
+    <p>E assim por diante</p>
+
+    <h2>HTML Elementos</h2>
+    </div>
 </body>
 </html>
