--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de exercicios</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="/icolegal.ico">
 </head>
 <body>
     <div class = "basic">
@@ -119,7 +120,365 @@
     </li>
     </ol>
 
+    <h2>Parágrafos HTML</h2>
+    <p>O elemento HTML <code>&lt;p&gt;</code> define um parágrafo.</p>
 
+    <p>Um parágrafo sempre começa em uma nova linha e os navegadores adicionam automaticamente algum espaço em branco (uma margem) antes e depois de um parágrafo.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <pre>&lt;p&gt;This is a paragraph.&lt;/p&gt;
+    &lt;p&gt;This is another paragraph.&lt;/p&gt;
+    </pre>
+
+    <p><strong>Exibição HTML</strong></p>
+    <p>Você não pode ter certeza de como o HTML será exibido.</p>
+
+    <p>Telas grandes ou pequenas e janelas redimensionadas criarão resultados diferentes.</p>
+
+    <p>Com HTML, você não pode alterar a exibição adicionando espaços ou linhas extras em seu código HTML.</p>
+
+    <p>O navegador removerá automaticamente quaisquer espaços e linhas extras quando a página for exibida:</p>
+
+    <pre>&lt;p&gt;
+    This paragraph
+    contains a lot of lines
+    in the source code,
+    but the browser
+    ignores it.
+    &lt;/p&gt;
+
+    &lt;p&gt;
+    This paragraph
+    contains         a lot of spaces
+    in the source         code,
+    but the        browser
+    ignores it.
+    &lt;/p&gt;
+    </pre>
+
+    <h2>Regras horizontais HTML</h2>
+    <p>A <code>&lt;hr&gt;</code> tag define uma quebra temática em uma página HTML e geralmente é exibida como uma regra horizontal.</p>
+
+    <p>O <code>&lt;hr&gt;</code> elemento é usado para separar o conteúdo (ou definir uma alteração) em uma página HTML:</p>
+
+    <pre>&lt;h2&gt;This is heading 1&lt;/h2&gt;
+    &lt;p&gt;This is some text.&lt;/p&gt;
+    &lt;hr&gt;
+    &lt;h2&gt;This is heading 2&lt;/h2&gt;
+    &lt;p&gt;This is some other text.&lt;/p&gt;
+    &lt;hr&gt;
+    </pre>
+
+    <h2>Estilos HTML</h2>
+    <p>O atributo HTML <code>style</code> é usado para adicionar estilos a um elemento, como cor, fonte, tamanho e muito mais.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p style="color:red;">Eu sou vermelho</p>
+    <p style="color:blue;">Eu sou azul</p>
+    <p style="font-size:24px;">Eu sou grande</p>
+
+    <p><strong>O atributo de estilo HTML</strong></p>
+    <p>Definir o estilo de um elemento HTML pode ser feito com o <code>style</code> atributo.</p>
+
+    <p>O atributo HTML <code>style</code> possui a seguinte sintaxe:</p>
+
+    <pre>&lt;tagname style="property:value;"&gt;</pre>
+
+    <p>A propriedade é uma propriedade CSS. O valor é um valor CSS.</p>
+
+    <p>Você aprenderá mais sobre CSS posteriormente neste tutorial.</p>
+
+    <p><strong>Cor de fundo</strong></p>
+    <p>A <code>background-color</code> propriedade CSS define a cor de fundo de um elemento HTML.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p>Defina a cor de fundo de uma página como azul claro:</p>
+
+    <pre>&lt;body style="background-color:powderblue;"&gt;
+
+    &lt;h1&gt;This is a heading&lt;/h1&gt;
+    &lt;p&gt;This is a paragraph.&lt;/p&gt;
+
+    &lt;/body&gt;</pre>
+
+    <p><strong>Exemplo</strong></p>
+    <p>Defina a cor de fundo para dois elementos diferentes:</p>
+
+    <pre>&lt;body&gt;
+
+    &lt;h1 style="background-color:powderblue;"&gt;This is a heading&lt;/h1&gt;
+    &lt;p style="background-color:tomato;"&gt;This is a paragraph.&lt;/p&gt;
+
+    &lt;/body&gt;</pre>
+
+    <h2>Formatação de texto HTML</h2>
+    <p>HTML oferece uma variedade de elementos para dar significado especial ao texto.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p><strong>This text is bold</strong></p>
+    <p><em>This text is italic</em></p>
+    <p>This is <sub>subscript</sub> and <sup>superscript</sup></p>
+
+    <h2>Elementos de formatação HTML</h2>
+    <p>Os elementos de formatação são utilizados para exibir diferentes estilos de texto:</p>
+
+    <li><b>&lt;b&gt;</b> - Texto em negrito</li>
+    <li><strong>&lt;strong&gt;</strong> - Texto importante</li>
+    <li><i>&lt;i&gt;</i> - Texto em itálico</li>
+    <li><em>&lt;em&gt;</em> - Texto enfatizado</li>
+    <li><mark>&lt;mark&gt;</mark> - Texto marcado</li>
+    <li><small>&lt;small&gt;</small> - Texto menor</li>
+    <li><del>&lt;del&gt;</del> - Texto excluído</li>
+    <li><ins>&lt;ins&gt;</ins> - Texto inserido</li>
+    <li><sub>&lt;sub&gt;</sub> - Texto subscrito</li>
+    <li><sup>&lt;sup&gt;</sup> - Texto sobrescrito</li>
+
+    <h3>Elementos HTML &ltb&gt e &ltstrong&gt</h3>
+    <p>O elemento &ltb&gt define texto em negrito, mas sem ênfase adicional.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p><b>Este texto está em negrito</b></p>
+
+    <p>O elemento &ltstrong&gt é utilizado para texto de grande importância, geralmente exibido em negrito.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p><strong>Este texto é importante!</strong></p>
+
+    <h2>Cotação HTML e elementos de citação</h2>
+    <p>Neste segmento, vamos explorar os elementos HTML <code>&lt;blockquote&gt;</code>, <code>&lt;q&gt;</code>, <code>&lt;abbr&gt;</code>, <code>&lt;address&gt;</code>, <code>&lt;cite&gt;</code> e <code>&lt;bdo&gt;</code>.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p>Aqui está uma citação do site do WWF:</p>
+
+    <blockquote cite="http://www.worldwildlife.org/who/index.html">
+    <p>Por 60 anos, o WWF trabalhou para ajudar pessoas e a natureza a prosperar. Como a principal organização de conservação do mundo, o WWF trabalha em quase 100 países. Em todos os níveis, colaboramos com pessoas ao redor do mundo para desenvolver e fornecer soluções inovadoras que protegem comunidades, vida selvagem e os lugares onde vivem.</p>
+    </blockquote>
+
+    <h2>HTML <code>&lt;blockquote&gt;</code> para citações</h2>
+    <p>O elemento HTML <code>&lt;blockquote&gt;</code> define uma seção citada de outra fonte.</p>
+
+    <p>Os navegadores geralmente recuam os elementos <code>&lt;blockquote&gt;</code>.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p>Aqui está uma citação do site do WWF:</p>
+
+    <blockquote cite="http://www.worldwildlife.org/who/index.html">
+    <p>Por 60 anos, o WWF trabalhou para ajudar pessoas e a natureza a prosperar. Como a principal organização de conservação do mundo, o WWF trabalha em quase 100 países. Em todos os níveis, colaboramos com pessoas ao redor do mundo para desenvolver e fornecer soluções inovadoras que protegem comunidades, vida selvagem e os lugares onde vivem.</p>
+    </blockquote>
+
+    <h2>HTML <code>&lt;q&gt;</code> para citações curtas</h2>
+    <p>A tag HTML <code>&lt;q&gt;</code> define uma citação curta.</p>
+
+    <p>Os navegadores normalmente inserem aspas ao redor da citação.</p>
+
+    <p><strong>Exemplo</strong></p>
+    <p>O objetivo do WWF é: <q>Construir um futuro onde as pessoas vivam em harmonia com a natureza.</q></p>
+
+    <h2>Comentários HTML</h2>
+    <p>Os comentários HTML são úteis para documentar o código-fonte HTML, embora não sejam exibidos no navegador.</p>
+
+    <h2>Etiqueta de comentário HTML</h2>
+    <p>Você pode adicionar comentários ao seu código HTML usando a seguinte sintaxe:</p>
+
+    <pre>&lt;!-- Escreva seus comentários aqui --&gt;</pre>
+
+    <p>Observe que há um ponto de exclamação (!) na tag inicial, mas não na tag final.</p>
+
+    <p><strong>Observação:</strong> Embora os comentários não sejam exibidos pelo navegador, eles podem ser úteis para documentar seu código-fonte HTML.</p>
+
+    <h2>Adicione comentários</h2>
+    <p>Com comentários, você pode adicionar notificações e lembretes ao seu código HTML:</p>
+
+    <pre>&lt;!-- This is a comment --&gt;
+
+    &lt;p&gt;This is a paragraph.&lt;/p&gt;
+
+    &lt;!-- Remember to add more information here --&gt;</pre>
+
+    <h2>Ocultar conteúdo</h2>
+    <p>Os comentários também podem ser utilizados para ocultar conteúdo, o que pode ser útil para ocultar temporariamente partes do código:</p>
+
+    <pre>&lt;p&gt;This is a paragraph.&lt;/p&gt;
+
+    &lt;!-- &lt;p&gt;This is another paragraph &lt;/p&gt; --&gt;
+
+    &lt;p&gt;This is a paragraph too.&lt;/p&gt;</pre>
+
+    <p>A segunda linha de codigo não será exibida ao úsuario no final.</p>
+
+    <h2>Cores HTML</h2>
+    <p>As cores HTML podem ser especificadas com nomes de cores predefinidos ou com valores RGB, HEX, HSL, RGBA ou HSLA.</p>
+
+    <h2>Nomes de cores</h2>
+    <p>No HTML, uma cor pode ser especificada usando um nome de cor:</p>
+
+    <!-- <ul> -->
+    <li style="color: tomato;">Tomato</li>
+    <li style="color: orange;">Orange</li>
+    <li style="color: dodgerblue;">Dodgerblue</li>
+    <li style="color: mediumseagreen;">MediumSeaGreen</li>
+    <li style="color: grey;">Grey</li>
+    <li style="color: darkblue;">darkblue</li>
+    <li style="color: violet;">Violet</li>
+    <li style="color: lightgray;">Lightgray</li>
+    <!-- </ul> -->
+
+    <p>O HTML suporta 140 nomes de cores padrão.</p>
+
+    <h2>Cor de fundo</h2>
+    <p>Você pode definir a cor de fundo dos elementos HTML:</p>
+
+    <div style="background-color:DarkSlateGray; color:White; padding:10px;">
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <h2>Cor do texto</h2>
+    <p>Você também pode definir a cor do texto:</p>
+
+    <h2 style="color:Tomato;">Hello World</h2>
+    <p style="color:DodgerBlue;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <p style="color:MediumSeaGreen;">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+
+    <h2>Links HTML</h2>
+    <p>Links são elementos essenciais encontrados em quase todas as páginas da web. Eles permitem que os usuários cliquem de uma página para outra.</p>
+
+    <h2>Links HTML - Hiperlinks</h2>
+    <p>Os links HTML são hiperlinks que possibilitam a navegação entre diferentes documentos.</p>
+
+    <p>Quando você move o mouse sobre um link, a seta do mouse se transforma em uma pequena mão.</p>
+
+    <p>Nota: Um link pode ser qualquer elemento HTML, não apenas texto. Pode ser uma imagem ou qualquer outro elemento HTML!</p>
+
+    <h2>Links HTML - Sintaxe</h2>
+    <p>A tag HTML <code>&lt;a&gt;</code> define um hiperlink. Possui a seguinte sintaxe:</p>
+
+    <pre>&lt;a href="url"&gt;texto do link&lt;/a&gt;</pre>
+
+    <p>O atributo mais importante do elemento <code>&lt;a&gt;</code> é o <code>href</code>, que indica o destino do link.</p>
+
+    <p>O texto do link é a parte que ficará visível ao leitor.</p>
+
+    <p>Clicar no texto do link enviará o leitor ao endereço URL especificado.</p>
+
+    <h3>Exemplo</h3>
+    <p>Este exemplo mostra como criar um link para o site da W3Schools:</p>
+
+    <p><a href="https://www.w3schools.com/">Visite o site da W3Schools!</a></p>
+
+    <p>Por padrão, os links aparecerão da seguinte forma em todos os navegadores:</p>
+    <!-- <ul> -->
+    <li>Um link não visitado está sublinhado e azul</li>
+    <li>Um link visitado está sublinhado e roxo</li>
+    <li>Um link ativo está sublinhado e vermelho</li>
+    <!-- </ul> -->
+
+    <h2>Favicon HTML</h2>
+    <p>Um favicon é uma pequena imagem exibida ao lado do título da página na guia do navegador.</p>
+
+    <h2>Como adicionar um favicon em HTML</h2>
+    <p>Você pode usar qualquer imagem que desejar como favicon. Também é possível criar seu próprio favicon em sites como <a href="https://www.favicon.cc">https://www.favicon.cc</a>.</p>
+
+    <p><strong>Dica:</strong> Um favicon é uma imagem pequena, portanto, deve ser uma imagem simples com alto contraste.</p>
+
+    <p>Uma imagem de favicon é exibida à esquerda do título da página na guia do navegador, como mostrado abaixo:</p>
+
+    <h3>Exemplo de favicon</h3>
+    <p>[Imagem de exemplo do favicon]</p>
+    
+
+    <p>Para adicionar um favicon ao seu site, salve sua imagem de favicon no diretório raiz do seu servidor web ou crie uma pasta no diretório raiz chamada "imagens" e salve sua imagem de favicon nesta pasta. Um nome comum para uma imagem de favicon é “favicon.ico”.</p>
+
+    <p>Em seguida, adicione um <code>&lt;link&gt;</code> elemento ao seu arquivo “index.html”, após o <code>&lt;title&gt;</code> elemento, assim:</p>
+
+    <h3>Exemplo</h3>
+    <pre>
+    &lt;!DOCTYPE html&gt;
+    &lt;html&gt;
+    &lt;head&gt;
+    &lt;title&gt;Título da minha página&lt;/title&gt;
+    &lt;link rel="icon" type="image/x-icon" href="/images/favicon.ico"&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+
+    &lt;h1&gt;Este é um Título&lt;/h1&gt;
+    &lt;p&gt;Este é um parágrafo.&lt;/p&gt;
+
+    &lt;/body&gt;
+    &lt;/html&gt;
+    </pre>
+
+    <p>Agora salve o arquivo “index.html” e recarregue-o em seu navegador. A guia do seu navegador agora deve exibir a imagem do seu favicon à esquerda do título da página.</p>
+
+    <h2>Tabelas HTML</h2>
+    <p>As tabelas HTML permitem que os desenvolvedores da web organizem os dados em linhas e colunas.</p>
+
+    <h3>Exemplo</h3>
+    <div class="table-container">
+        <table>
+          <tr>
+            <th>Empresa</th>
+            <th>Contato</th>
+            <th>País</th>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>Alemanha</td>
+          </tr>
+          <tr>
+            <td>Centro comercial Moctezuma</td>
+            <td>Francisco Chang</td>
+            <td>México</td>
+          </tr>
+          <tr>
+            <td>Ernst Handel</td>
+            <td>Roland Mendel</td>
+            <td>Áustria</td>
+          </tr>
+          <tr>
+            <td>Island Trading</td>
+            <td>Helen Bennett</td>
+            <td>Reino Unido</td>
+          </tr>
+          <tr>
+            <td>Laughing Bacchus Winecellars</td>
+            <td>Yoshi Tannamuri</td>
+            <td>Canadá</td>
+          </tr>
+          <tr>
+            <td>Magazzini Alimentari Riuniti</td>
+            <td>Giovanni Rovelli</td>
+            <td>Itália</td>
+          </tr>
+        </table>
+      </div>
+
+    <h2>Definir uma tabela HTML</h2>
+    <p>Uma tabela em HTML consiste em células de tabela dentro de linhas e colunas.</p>
+
+    <h3>Exemplo</h3>
+    <p>Aqui está uma tabela HTML simples:</p>
+
+    <div class="table-container">
+    <table>
+    <tr>
+        <th>Empresa</th>
+        <th>Contato</th>
+        <th>País</th>
+    </tr>
+    <tr>
+        <td>Alfreds Futterkiste</td>
+        <td>Maria Anders</td>
+        <td>Alemanha</td>
+    </tr>
+    <tr>
+        <td>Centro comercial Moctezuma</td>
+        <td>Francisco Chang</td>
+        <td>México</td>
+    </tr>
+    </table>
+    </div>
     </div>
 </body>
 </html>
